add functionalities to (ajouter un sortie , ajouter un entree)

--- a/app/globals.css
+++ b/app/globals.css
@@ -37,3 +37,15 @@ th {
   font-weight: 500;
   font-size: 13px;
 }
+
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
